[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/cardbackmockup.png" type="Texture" id=1]
[ext_resource path="res://Main/Deck.gd" type="Script" id=2]
[ext_resource path="res://Assets/DotGothic16-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Deck" type="TextureButton"]
anchor_right = 0.075
anchor_bottom = 0.181
margin_right = -48.0
margin_bottom = -65.16
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="DeckCountLabel" type="Label" parent="."]
visible = false
margin_left = 4.0
margin_top = -25.0
margin_right = 44.0
margin_bottom = -1.0
custom_colors/font_color = Color( 1, 1, 0.878431, 1 )
custom_fonts/font = SubResource( 1 )
text = "TEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Deck_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Deck_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Deck_pressed"]
[connection signal="timeout" from="DrawTimer" to="." method="_on_DrawTimer_timeout"]
